--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,5 +1,9 @@
 $main-layout-bgcolor: rgba(238, 220, 220, .2);
 
+$pre-section-title-color:  #87A1B6;
+$section-title-color: #16133E;
+$section-description-color: #5A7184;
+
 $header-bgcolor: rgba(100, 100, 100, .01);
 $header-link-color: #000000;
 $header-log-in-bgcolor: #16133E;
@@ -21,11 +25,41 @@ $banner-view-projects-color: #FFFFFF;
 $banner-learn-more-border: #007FFC;
 $banner-learn-more-color: #007FFC;;
 
-$pre-section-title-color:  #87A1B6;
-$section-title-color: #16133E;
-$section-description-color: #5A7184;
-
 $service-bgcolor: rgba(100, 100, 100, .1);
 $service-content-group-bgcolor: #eaebef;
 $service-content-group-border: #E5EAF4;
 $service-content-group-border: #143f98;
+$service-group-icon-border: grey;
+$service-group-header-color: #16133E;
+$service-group-content-color: #16133E;
+$service-group-learn-more-color: #16133E;
+$features-comment-img-color: #FFFFFF;
+
+$price-bgcolor: rgba(100, 100, 100, .01);
+$price-started-plan-bgcolor: rgba(100, 100, 100, .3);
+$price-started-plan-shadow: 0px 2px 35px rgba(0, 0, 0, 0.03);
+$price-plane-name-color: #16133E;
+$price-plan-periodicity-color: #87A1B6;
+$price-plan-description-color: #87A1B6;
+$price-button-get-started-bgcolor: lightyellow;
+$price-button-get-started-border: black;
+$price-started-plan-first-thick-line-bgcolor: #0593FA;
+$price-started-plan-first-plan-cost-color: #0593FA;
+$price-started-plan-second-thick-line-bgcolor: #56CBAE;
+$price-started-plan-second-plan-cost-color: #56CBAE;
+$price-started-plan-third-thick-line-bgcolor: #FA6770;
+$price-started-plan-third-plan-cost-color: #FA6770;
+
+$free-section-title-color: #FFFFFF;
+$free-section-description-color: #FFFFFF;
+$free-button-try-color: #16133E;
+$free-button-watch-demo-color: #FFFFFF;
+$free-button-watch-demo-bgcolor: #007FFC;
+
+$footer-bgcolor: #16143D;
+$footer-link-color: #FFFFFF;
+$footer-general-info-description-color: #FFFFFF;
+$footer-services-em-color: #FFFFFF;
+$footer-company-em-color: #FFFFFF;
+$footer-contacts-em-color: #FFFFFF;
+$footer-copyright-em-color: #FFFFFF;
