--- a/css/_features.scss
+++ b/css/_features.scss
@@ -1,9 +1,10 @@
 .features {
-  width: $selector-width;
-  height: 693px;
+  @extend %features-size;
   background: rgba(100, 100, 100, .01);
+
   .img-placeholder {
-    width: clamp(600px, 100%, 1200px);
+    @extend %features-img-placeholder-size;
+
     .card {
       position: relative;
       border-radius: 8px;
@@ -21,14 +22,8 @@
         right: 15%;
         bottom: 10%;
         top: 70%;
-
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        font-size: clamp(18px,  3vw, 36px);
-        line-height: clamp(24px,  4.5vw, 48px);
-
-        color: #FFFFFF;
+        @extend %features-comment-img-font;
+        color: $features-comment-img-color;
       }
     }
   }
