--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -2,7 +2,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&display=swap');
 
+%pre-section-title-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+}
 
+%section-title-font {
+  font-family: Nunito Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+%section-description-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 16px;
+}
 
 %header-link-font {
   font-family: Roboto;
@@ -45,29 +68,115 @@
   line-height: 16px;
 }
 
-%pre-section-title-font {
+%service-group-header-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 52px;
+}
+
+%service-group-content-font  {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+%service-group-learn-more-font  {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 52px;
+}
+
+%features-comment-img-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: clamp(18px, 3vw, 36px);
+  line-height: clamp(24px, 4.5vw, 48px);
+}
+
+%price-plan-name-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+%price-plan-cost-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+}
+
+%price-plan-periodicity-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+%price-plan-description-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+}
+
+%free-button-try-font {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 16px;
-  text-transform: uppercase;
 }
 
-%section-title-font {
-  font-family: Nunito Sans;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 52px;
-}
-
-%section-description-font {
+%free-button-watch-demo-font {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 16px;
 }
 
+%footer-link-font {
+  text-decoration: none;
+  letter-spacing: 1.76471px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: clamp(10px, 1.5vw, 15px);
+  line-height: 22px;
+  &.email-address {
+    font-size: clamp(10px, 2.1vw, 25px);
+  }
+}
 
+%footer-general-info-description-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+%footer-child-em-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
