--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -1,34 +1,3 @@
-//HEADER, FOOTER, SECTIONS BETWEEN THEM, AND THEIR DIRECT CHILDREN ONLY
-//
-//      flex          grid
-//      ---------|--------------
-//                    |---child
-//      HEADER  ------|---child
-//         |          |---child
-//         |
-//         |          |---child
-//      SECTION ------|---child
-//         |          |---child
-//         |
-//         |          |---child
-//      SECTION ------|---child
-//         |          |---child
-//         |
-//         |          |---child
-//      SECTION ------|---child
-//         |          |---child
-//         |
-//         |          |---child
-//      SECTION ------|---child
-//         |          |---child
-//         |
-//         |          |---child
-//      SECTION ------|---child
-//         |          |---child
-//         |
-//         |          |---child
-//      FOOTER  ------|---child
-//                    |---child
 
 .main-layout {
   display: flex;
@@ -36,7 +5,6 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  //gap: ;
 
   .header {
     display: grid;
@@ -243,3 +211,35 @@
   }
 
 }
+
+//HEADER, FOOTER, SECTIONS BETWEEN THEM
+//
+//      flex          grid
+//      ---------|--------------
+//                    |---child
+//      HEADER  ------|---child
+//         |          |---child
+//         |
+//         |          |---child
+//      SECTION ------|---child
+//         |          |---child
+//         |
+//         |          |---child
+//      SECTION ------|---child
+//         |          |---child
+//         |
+//         |          |---child
+//      SECTION ------|---child
+//         |          |---child
+//         |
+//         |          |---child
+//      SECTION ------|---child
+//         |          |---child
+//         |
+//         |          |---child
+//      SECTION ------|---child
+//         |          |---child
+//         |
+//         |          |---child
+//      FOOTER  ------|---child
+//                    |---child
